--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,21 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+:root {
+	--ion-color-header: #202020;
+	--ion-color-header-rgb: 32,32,32;
+	--ion-color-header-contrast: #ffffff;
+	--ion-color-header-contrast-rgb: 255,255,255;
+	--ion-color-header-shade: #1c1c1c;
+	--ion-color-header-tint: #363636;
+}
+
+.ion-color-header {
+	--ion-color-base: var(--ion-color-header);
+	--ion-color-base-rgb: var(--ion-color-header-rgb);
+	--ion-color-contrast: var(--ion-color-header-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-header-contrast-rgb);
+	--ion-color-shade: var(--ion-color-header-shade);
+	--ion-color-tint: var(--ion-color-header-tint);
+}
