--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,64 +1,4 @@
-<ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar color="header">
-      <div class="image">
-        <ion-img src="../../assets/icon/usina-logo.png"></ion-img>
-      </div>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content class="ion-padding">
-    <ion-list class="items" *ngFor="let item of menuOptions">
-      <ion-item [button]="true"> 
-        <ion-icon name="{{item.icon}}"></ion-icon>{{item.text}}
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-
-<ion-header>
-  <ion-toolbar color="header">
-    <div class="align">
-
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <div class="image">
-        <ion-img src="../../assets/icon/usina-logo.png"></ion-img>
-      </div>
-      <div class="place-button">
-        <ion-button class="round-button" (click)="setOpen(true)">
-          <ion-icon slot="icon-only" name="notifications"></ion-icon>
-        </ion-button>
-        <div class="badge-circle" *ngIf="!isNotifficationsOpen"></div>
-        <ion-modal [isOpen]="isModalOpen">
-          <ng-template>
-            <ion-header>
-              <ion-toolbar color="header">
-                <ion-title>Notificações</ion-title>
-                <ion-buttons slot="end">
-                  <ion-button (click)="setOpen(false)">Fechar</ion-button>
-                </ion-buttons>
-              </ion-toolbar>
-            </ion-header>
-            <ion-content class="ion-padding">
-
-              <ion-card *ngFor="let item of notifications">
-                <ion-card-header>
-                  <ion-card-title>{{item.title}}</ion-card-title>
-                </ion-card-header>
-              
-                <ion-card-content>
-                  {{item.text}}
-                </ion-card-content>
-              </ion-card>
-            </ion-content>
-          </ng-template>
-        </ion-modal>
-      </div>
-
-    </div>
-  </ion-toolbar>
-</ion-header>
+<app-header/>
 
 <ion-content [fullscreen]="true" id="main-content">
   <div id="container">
