--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,38 +1,64 @@
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  transform: translateY(-50%);
+  display:flex;
+  text-align: left;
+  background-color: #090909;
+  margin-left: 8%;
+  margin-top: 8%;
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+  font-size: 18px;
 }
 
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
 }
-
+#container ion-button{
+  --border-radius: 50%;
+  --border-color: #76430f;
+}
 
 .bottom-rounded {
+  padding: 2%;
   width: 100%; 
-  height: 100px; 
   background-color: #202020; 
   border-top-left-radius: 0; 
   border-top-right-radius: 0; 
   border-bottom-left-radius: 45px; 
   border-bottom-right-radius: 45px; 
+}
+.bottom-rounded ion-item{
+  top: 0;
+  margin-left: 8%;
+}
+
+.centralizer{
+  display: flex;
+  justify-content: center;
+}
+.buttons-holder{
+  display: flex;
+  padding: 4px;
+  background-color: #161616;
+  border-radius: 10px;
+  justify-content: space-between; 
+  align-items: center; 
+}
+.buttons-holder strong{
+  font-size: 10px;
+  color:#76430f
+}
+
+ion-icon{
+  color:#76430f
+}
+.is-holder{
+  margin: 0 5px;
 }
