--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,13 +15,13 @@
     </ion-item>
     <div class="centralizer">
       <div class="buttons-holder">
-        <div class="is-holder">
+        <div class="is-holder" (click)="goToBody()">
           <ion-icon name="accessibility-sharp"></ion-icon>
           <strong href="#" class="button">MEU CORPO</strong>
         </div>
-        <div class="is-holder">
+        <div class="is-holder" (click)="goToGoals()">
           <ion-icon name="medal-sharp"></ion-icon>
-          <strong href="#" class="button">OBJETIVOS E CONQUISTA</strong>
+          <strong href="#" class="button">OBJETIVOS E CONQUISTAS</strong>
         </div>
 
 
