--- a/src/app/shared/components/swipper/swipper.component.scss
+++ b/src/app/shared/components/swipper/swipper.component.scss
@@ -30,12 +30,12 @@
     color:#76430f
 }
 .swipper swiper-slide{
-    height: 15vh;
+    height: 20vh;
 }
 
 .swipper img{
     width: 95%;
-    height: 15vh;
+    height: 20vh;
     border-radius: 15px;
     filter: brightness(50%); 
 }
@@ -66,7 +66,7 @@ h4{
 .spanStyler{
     position: absolute;
     top: 65%;
-    left: 10px;
+    left: 15px;
 }
 .spanStyler{
     color: #ec7b07;
@@ -115,4 +115,34 @@ swiper-slide img {
     max-width: 100%;
     height: auto;
     max-height: 100%;
+}
+
+@media screen and (min-width:424px) {
+    .swipper{
+        margin-top: 8px;
+        height: 15vh;
+    }
+    .swipper img{
+        height: 30vh;
+        border-radius: 15px;
+        filter: brightness(50%); 
+    }
+    .swipper swiper-slide{
+        height: 30vh;
+    }
+}
+
+@media screen and (min-width:767px) {
+    .swipper{
+        margin-top: 8px;
+        height: 15vh;
+    }
+    .swipper img{
+        height: 40vh;
+        border-radius: 15px;
+        filter: brightness(50%); 
+    }
+    .swipper swiper-slide{
+        height: 40vh;
+    }
 }
