--- a/src/app/shared/components/swipper/swipper.component.scss
+++ b/src/app/shared/components/swipper/swipper.component.scss
@@ -90,7 +90,11 @@ h4{
     height: 40%; 
     background-color: orange; 
   }
-
+.h6Styler{
+  position: absolute;
+  top: 65%; 
+  left: 15px;
+}
   
 swiper-slide {  
     display: flex;
@@ -144,5 +148,11 @@ swiper-slide img {
     }
     .swipper swiper-slide{
         height: 40vh;
+    }
+    h4{
+        font-size: 24px;
+    }
+    h6{
+        font-size: 24px;
     }
 }
